[tool.poetry]
name = "GOIT_WEB_dz12"
version = "0.1.0"
description = ""
authors = ["ArleKinG44 <denpolet@gmail.com>"]
readme = "README.md"
packages = [{include = "GOIT_WEB_dz12"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.27"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
pydantic = "^2.6.3"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"